[tool.poetry]
name = "wherobots-python-dbapi"
version = "0.7.3"
description = "Python DB-API driver for Wherobots DB"
authors = ["Maxime Petazzoni <max@wherobots.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "wherobots" }]

[project.urls]
Homepage = "https://github.com/wherobots/wherobots-python-dbapi-driver"
Tracker = "https://github.com/wherobots/wherobots-python-dbapi-driver/issues"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"
websockets = "^12.0"
tenacity = "^8.2.3"
pyarrow = "^14.0.2"
cbor2 = "^5.6.3"
pandas = "^2.1.0"
StrEnum = "^0.4.15"
# pyarrow 14.0.2 doesn't limit numpy < 2, but it should, we do it here
numpy = "<2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^8.0.2"
black = "^24.2.0"
pre-commit = "^3.6.2"
conventional-pre-commit = "^3.1.0"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
strict = true
show_error_codes = true
