[project]
name = "wherobots-python-dbapi"

[tool.poetry]
name = "wherobots-python-dbapi"
version = "0.13.0"
description = "Python DB-API driver for Wherobots DB"
authors = ["Maxime Petazzoni <max@wherobots.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "wherobots" }]

[project.urls]
Homepage = "https://github.com/wherobots/wherobots-python-dbapi-driver"
Tracker = "https://github.com/wherobots/wherobots-python-dbapi-driver/issues"

[tool.poetry.dependencies]
python = "^3.8"
packaging = "*"
requests = ">=2.31.0"
websockets = ">=13.0"
tenacity = ">=8.2.3"
cbor2 = ">=5.6.3"
StrEnum = "^0.4.15"
pyarrow = { version = ">=14.0.2" }
pandas = { version = "*" }
pytest = { version = ">=8.0.2", optional = true }

[tool.poetry.extras]
test = [ "pytest" ]

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
pytest = ">=8.0.2"
pyarrow = ">=14.0.2"
pandas = "*"
rich = ">=13.7.1"

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
strict = true
show_error_codes = true
